--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     {% load static %}
     <link rel="stylesheet" href="{% static 'accounts/style.css' %}" type="text/css">
 
@@ -32,7 +33,6 @@
         {% else %}
         <ul class="nav navbar-nav">
             <li><a href="{% url 'login' %}">Login</a></li>
-        </ul>
         <ul class="nav navbar-nav navbar-right">
             <li id = "reg"><a href="{% url 'register' %}">Register</a></li>
         </ul>
@@ -43,6 +43,7 @@
 
 
 <div class="container">
+        </ul>
     {% block body %}
 
     <h1>Base</h1>
